force-app/main/default/objects/Quote/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Customer company name from the Renewal linked to this Quote. Exposes the company name for Quote email templates without changing the Account relationship.</description>
    <formula>Opportunity.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Customer company name from the Renewal linked to this Quote. Exposes the company name for Quote email templates without changing the Account relationship.</inlineHelpText>
    <label>Company Name for Email</label>
    <type>Text</type>
</CustomField>