force-app/main/default/objects/Quote/fields/Coverage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Amount__c</fullName>
    <description>Quoted coverage amount (e.g. Business Personal Property / BPP). Copied to the new policy's Business Personal Property when the renewal is Closed Won.</description>
    <inlineHelpText>Coverage amount from the carrier quote (e.g. BPP coverage).</inlineHelpText>
    <label>Coverage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>