force-app/main/default/objects/Quote/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <description>Quoted deductible. Copied to the new policy&apos;s Deductible when the renewal is Closed Won.</description>
    <label>Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>