force-app/main/default/objects/Quote/fields/Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Insurance Provider (Account) that issued this quote. Each quote on a renewal Opportunity represents one provider's offer.</description>
    <inlineHelpText>Select the insurance company that provided this quote. Only Accounts with the Insurance Provider record type are allowed.</inlineHelpText>
    <label>Insurance Provider</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected company must have the record type 'Insurance Provider'. Please choose a valid insurance provider.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Insurance_Provider</value>
        </filterItems>
        <infoMessage>Only companies with the record type "Insurance Provider" are available for selection in this field.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>