force-app/main/default/objects/Quote/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <description>How the premium for this quoted policy is scheduled to be paid. Mirrors Insurance Payment Frequency; copied to the new policy when the renewal is Closed Won.</description>
    <inlineHelpText>Payment option from the carrier quote (e.g. Full / Monthly).</inlineHelpText>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Full(Auto Renewal)</fullName>
            </value>
            <value>
                <fullName>Monthly(Auto Renewal)</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Quarterly(Auto Renewal)</fullName>
            </value>
            <value>
                <fullName>2 Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>