force-app/main/default/objects/Quote/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Method used to pay the premium for this quoted policy. Mirrors Insurance Payment Method; copied to the new policy when the renewal is Closed Won.</description>
    <inlineHelpText>Payment method from the carrier quote (e.g. Credit Card / Check).</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Escrow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>