force-app/main/default/objects/Quote/fields/Plan_Change_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Plan_Change_Deadline__c</fullName>
    <description>Deadline to request plan changes, one calendar month before the Quote proposed coverage start date.</description>
    <formula>IF(
  ISBLANK(Proposed_Start_Date__c),
  NULL,
  ADDMONTHS(Proposed_Start_Date__c, -1)
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Deadline to request plan changes, one calendar month before the Quote proposed coverage start date.</inlineHelpText>
    <label>Plan Change Deadline</label>
    <type>Date</type>
</CustomField>