force-app/main/default/objects/Quote/fields/Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name__c</fullName>
    <description>Plan name offered by the insurance provider for this quote (e.g., "Gold HMO", "Silver PPO").</description>
    <inlineHelpText>Enter the marketing or internal plan name the provider uses for this offering. Copied to the new Insurance record if accepted.</inlineHelpText>
    <label>Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>