force-app/main/default/objects/Quote/fields/Policy_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Name__c</fullName>
    <description>Policy holder of the Original Insurance linked through the Renewal. Preserves the insured contact when the Quote Contact is empty or different.</description>
    <formula>TRIM(
  BLANKVALUE(Opportunity.Original_Insurance__r.Policy_Holder__r.FirstName, "") &amp; " " &amp;
  Opportunity.Original_Insurance__r.Policy_Holder__r.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Policy holder of the Original Insurance linked through the Renewal. Preserves the insured contact when the Quote Contact is empty or different.</inlineHelpText>
    <label>Policy Holder Name</label>
    <type>Text</type>
</CustomField>