force-app/main/default/objects/Quote/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <description>Policy or quote number provided by the carrier for this renewal quote.</description>
    <inlineHelpText>Enter the policy/quote number from the carrier's quote email.</inlineHelpText>
    <label>Policy Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>