force-app/main/default/objects/Quote/fields/Proposed_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_End_Date__c</fullName>
    <description>Last day of proposed coverage, calculated from the Quote proposed start date and contract term. Blank when the start or a positive term is missing.</description>
    <formula>IF(
  OR(ISBLANK(Proposed_Start_Date__c), ISBLANK(Proposed_Term_months__c), Proposed_Term_months__c &lt;= 0),
  NULL,
  ADDMONTHS(Proposed_Start_Date__c, Proposed_Term_months__c) - 1
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Last day of proposed coverage, calculated from the Quote proposed start date and contract term. Blank when the start or a positive term is missing.</inlineHelpText>
    <label>Proposed End Date</label>
    <type>Date</type>
</CustomField>