force-app/main/default/objects/Quote/fields/Proposed_Premium__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Premium__c</fullName>
    <description>Premium amount proposed by the insurance provider for this quote.</description>
    <inlineHelpText>Enter the premium amount the provider is offering. This value is copied to the new Insurance policy if the customer accepts this quote.</inlineHelpText>
    <label>Proposed Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>