force-app/main/default/objects/Quote/fields/Proposed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Start_Date__c</fullName>
    <description>Start date of coverage proposed by the insurance provider for this quote.</description>
    <inlineHelpText>Enter the start date the provider is offering. This typically aligns with the day after the original policy ends. Copied to the new Insurance record if accepted.</inlineHelpText>
    <label>Proposed Start Date</label>
    <type>Date</type>
</CustomField>