force-app/main/default/objects/Quote/fields/Proposed_Term_months__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Term_months__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Contract term in months proposed by the insurance provider for this quote.</description>
    <inlineHelpText>Enter the contract length in months the provider is offering. Default is 12. Copied to the new Insurance record if accepted.</inlineHelpText>
    <label>Proposed Term (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>