force-app/main/default/objects/Quote/fields/Renewal_Name__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Name__c</fullName>
    <description>Clickable link to the parent Renewal (Opportunity) this quote belongs to. Mirrors the standard Opportunity lookup but is shown under the &quot;Renewal Name&quot; label on the Quote record page.</description>
    <formula>IF(ISBLANK(OpportunityId), &quot;&quot;, HYPERLINK(&quot;/&quot; &amp; OpportunityId, Opportunity.Name, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Read-only — links to the Renewal Opportunity this quote was created for.</inlineHelpText>
    <label>Renewal Name</label>
    <type>Text</type>
</CustomField>