force-app/main/default/objects/Quote/listViews/Accepted_Quotes.listView-meta.xml
<ListView>
    <fullName>Accepted_Quotes</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Insurance_Provider__c</columns>
    <columns>Plan_Name__c</columns>
    <columns>Proposed_Premium__c</columns>
    <columns>Proposed_Start_Date__c</columns>
    <columns>Proposed_Term_months__c</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Accepted Quotes</label>
</ListView>