force-app/main/default/objects/Quote/listViews/Active_Quotes.listView-meta.xml
<ListView>
    <fullName>Active_Quotes</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Insurance_Provider__c</columns>
    <columns>Plan_Name__c</columns>
    <columns>Proposed_Premium__c</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>notEqual</operation>
        <value>Denied,Rejected</value>
    </filters>
    <label>Active Quotes</label>
</ListView>