force-app/main/default/objects/Quote/listViews/All_Quotes.listView-meta.xml
<ListView>
    <fullName>All_Quotes</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Insurance_Provider__c</columns>
    <columns>Plan_Name__c</columns>
    <columns>Proposed_Premium__c</columns>
    <columns>Proposed_Start_Date__c</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
</ListView>