force-app/main/default/objects/Quote/listViews/Pending_Customer_Decision.listView-meta.xml
<ListView>
    <fullName>Pending_Customer_Decision</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Insurance_Provider__c</columns>
    <columns>Plan_Name__c</columns>
    <columns>Proposed_Premium__c</columns>
    <columns>Proposed_Start_Date__c</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Presented</value>
    </filters>
    <label>Pending Customer Decision</label>
</ListView>