force-app/main/default/objects/Quote/listViews/Selected_Quotes.listView-meta.xml
<ListView>
    <fullName>Selected_Quotes</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Insurance_Provider__c</columns>
    <columns>Plan_Name__c</columns>
    <columns>Proposed_Premium__c</columns>
    <columns>Proposed_Start_Date__c</columns>
    <columns>Proposed_Term_months__c</columns>
    <columns>QUOTE.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.ISSYNCING</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Selected Quotes (Synced)</label>
</ListView>